# villanibench

./: .gitignore  ;f  README.md  pyproject.toml
docs/: methodology.md  runner_adapter_contract.md  scoring.md  task_authoring.md
suites/core_v0_1/: suite.yaml
suites/core_v0_1/tasks/VB-LOC-001/: task.yaml
suites/core_v0_1/tasks/VB-LOC-002/: task.yaml
suites/core_v0_1/tasks/VB-LOC-003/: task.yaml
suites/core_v0_1/tasks/VB-LOC-004/: prompt.txt  task.yaml
suites/core_v0_1/tasks/VB-LOC-005/: prompt.txt  task.yaml
suites/core_v0_1/tasks/VB-MIN-001/: task.yaml
suites/core_v0_1/tasks/VB-MIN-002/: prompt.txt  task.yaml
suites/core_v0_2/: suite.yaml
suites/hard_v0_1/: suite.yaml
suites/hard_v0_2/: README.md  suite.yaml
tests/: test_adapter_construction.py  test_aider_adapter.py  test_budget.py  test_claude_code_adapter.py  test_compare.py  test_diff_analysis.py  test_external_cli_adapter.py  test_minimal_react_control.py  test_notes.py  test_pi_adapter.py  test_qwen_cli_adapter.py  test_result_status.py  test_run_flow.py  test_scoring.py  test_suite_loading.py  test_task_validation.py  test_villani_adapter_template.py
villanibench/: __init__.py  cli.py
villanibench/harness/: budget.py  compare.py  diff_analysis.py  llm.py  notes.py  process.py  report.py  result_schema.py  run.py  sandbox.py  scoring.py  telemetry.py
villanibench/harness/adapters/: __init__.py  aider.py  base.py  claude_code.py  external_cli.py  minimal_react_control.py  opencode.py  pi.py  qwen_cli.py  villani.py
villanibench/tasks/: __init__.py  loader.py  schema.py  validation.py
(+712 files in other folders)
